tests/specs/ecosystem/kyiro/hono/0_1_0.test
kyiro/hono/0.1.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[unsupported-super-class-expr]: super class expression was too complex
  --> /deno_dist/hono-base.ts:96:11
   | 
96 | > extends defineDynamicClass()<E, S, BasePath> {
   |           ^^^^^^^^^^^^^^^^^^^^ this is the superclass expression
   = hint: extract the superclass expression into a variable

  info: fast check was unable to infer the type of the superclass expression
  docs: https://jsr.io/go/slow-type-unsupported-super-class-expr


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:236:3
    | 
236 |   onError = (handler: ErrorHandler<E>) => {
    |   ^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:250:3
    | 
250 |   notFound = (handler: NotFoundHandler<E>) => {
    |   ^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:374:3
    | 
374 |   fetch = (request: Request, Env?: E['Bindings'] | {}, executionCtx?: ExecutionContext) => {
    |   ^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:390:3
    | 
390 |   request = (
    |   ^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/hono-base.ts:415:3
    | 
415 |   fire = () => {
    |   ^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: functions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/utils/buffer.ts:51:14
   | 
51 | export const bufferToFormData = (arrayBuffer: ArrayBuffer, contentType: string) => {
   |              ^^^^^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /deno_dist/router/smart-router/router.ts:62:7
   | 
62 |   get activeRouter() {
   |       ^^^^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/request.ts:282:7
    | 
282 |   get url() {
    |       ^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/request.ts:296:7
    | 
296 |   get method() {
    |       ^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/context.ts:218:3
    | 
218 |   setLayout = (layout: Layout<PropsForRenderer & { Layout: Layout }>) => (this.layout = layout)
    |   ^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
   --> /deno_dist/context.ts:240:3
    | 
240 |   setRenderer = (renderer: Renderer) => {
    |   ^^^^^^^^^^^ this function is missing an explicit return type
    = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: functions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


